--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <input type="text" placeholder="~해야하는데" required />
       <input type="submit"/>
     </form>
-    <div class="must-todo">
-    </div>
+    
+    <script src="timer.js"></script>
   </body>
 </html>
