--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>해야하는데 타이머</title>
   </head>
   <body>
     <span class="must-timer">24:00:00</span>
     <form class="must-form">
       <input type="text" placeholder="~해야하는데" required />
-      <input type="submit"/>
     </form>
-    
+
     <script src="timer.js"></script>
   </body>
 </html>
