--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <span class="must-timer">24:00:00</span>
     <form class="must-form">
-      <input type="text" placeholder="~해야하는데" required />
+      <input type="text" placeholder="~해야 하는데..." required />
     </form>
 
     <script src="timer.js"></script>
